--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,60 @@
+#photos-index img {
+  width: 300px;
+}
+
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-family: system-ui;
+}
+
+
+header {
+  background-color: black;
+  color: white;
+  padding: 1em;
+}
+
+
+header a {
+  margin-right: 1em;
+  padding: 0.5em;
+  color: inherit;
+  text-decoration: none;
+}
+
+
+header a:hover {
+  background-color: gray;
+  border-radius: 0.1em;
+}
+
+
+footer {
+  background-color: gray;
+  padding: 2em;
+  margin-top: 1em;
+  text-align: center;
+}
+
+
+
+main {
+  max-width: 50em;
+  margin: 0 auto;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 150px;
+}
+
+.card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
